--- a/iosreviewApp/Base.lproj/Localizable.strings
+++ b/iosreviewApp/Base.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "please type phone number" = "please type phone number";
 "You are registered" = "You are registered";
 "not fild friend" = "not fild friend";
+"please type comment" = "please type comment";
